fix wcag page accueil - ok pr extension chrome wave

--- a/css/et-line.css
+++ b/css/et-line.css
@@ -106,8 +106,7 @@
 .et-icon-video,
 .et-icon-wallet,
 .et-icon-wine {
-    font-family: et-line;
-    speak: none;
+    font-family: "et-line";
     font-style: normal;
     font-weight: 400;
     font-variant: normal;
