--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0;
   padding: 0;
@@ -199,7 +200,7 @@ button {
   color: rgba(255, 255, 255, 0.6);
 }
 .d-bloc a .icon-md {
-  color: rgba(255, 255, 255, 0.6);
+  color: white;
 }
 .d-bloc a .icon-lg {
   color: rgba(255, 255, 255, 0.6);
@@ -211,7 +212,8 @@ button {
   color: white;
 }
 .d-bloc a:hover .icon-md {
-  color: white;
+  color: #364577;
+  transform: scale(1.2);
 }
 .d-bloc a:hover .icon-lg {
   color: white;
@@ -791,7 +793,9 @@ h3 {
   font-weight: 400;
   color: #575757 !important;
   font-size: 15px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
+  font-size: 1.4em;
+  line-height: 1.4em;
   font-weight: 700;
   color: #333333 !important;
 }
@@ -818,8 +822,35 @@ h6 {
 p {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
-  font-size: 11px;
+  color: #575757;
+  font-size: 1.2em;
+}
+
+.highlight {
+  padding-bottom: 1.3em;
+  font-size: 1.6em;
+  font-weight: 500;
+  font-family: "Helvetica";
+  color: #575757;
+}
+
+.highlight-italic {
+  font-family: "Serif";
+  font-size: 1.4em;
+  color: #575757;
+  border-left: none !important;
+  font-style: italic;
+  margin-bottom: -5px;
+}
+.highlight-italic::before {
+  content: "“";
+  color: #6f911a;
+  font-size: 1em;
+}
+.highlight-italic::after {
+  content: "”";
+  color: #6f911a;
+  font-size: 1em;
 }
 
 label {
@@ -921,20 +952,24 @@ label {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #F3976C;
+  /*background-color: #F3976C;*/
+  background-color: #DC2F02;
 }
 
 .tc-white {
-  color: #F3976C !important;
+  /*color: #F3976C !important;*/
+  color: white !important;
 }
 
 .btn-atomic-tangerine {
-  background: #F3976C;
+  /*background: #F3976C;*/
+  background: #DC2F02;
   color: #FFFFFF !important;
 }
 .btn-atomic-tangerine:hover {
   background: #c27956 !important;
   color: #FFFFFF !important;
+  transform: scale(1.05);
 }
 
 .ltc-white {
