--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,5 @@
+$color-orange-chouette: #DC2F02;
+
 body {
 	margin: 0;
 	padding: 0;
@@ -188,7 +190,7 @@ button {
 			color: rgba(255, 255, 255, .6);
 		}
 		.icon-md {
-			color: rgba(255, 255, 255, .6);
+			color:white;
 		}
 		.icon-lg {
 			color: rgba(255, 255, 255, .6);
@@ -201,7 +203,8 @@ button {
 				color: rgba(255, 255, 255, 1);
 			}
 			.icon-md {
-				color: rgba(255, 255, 255, 1);
+				color: #364577;
+				transform: scale(1.2);
 			}
 			.icon-lg {
 				color: rgba(255, 255, 255, 1);
@@ -826,7 +829,9 @@ h3 {
 	font-weight: 400;
 	color: #575757 !important;
 	font-size: 15px;
-	text-transform: uppercase;
+	/*text-transform: uppercase;*/
+	font-size: 1.4em;
+	line-height: 1.4em;
 	font-weight: 700;
 	color: #333333 !important;
 }
@@ -849,8 +854,33 @@ h6 {
 p {
 	font-family: "helvetica";
 	font-weight: 400;
-	color: #575757 !important;
-	font-size: 11px;
+	color: #575757;
+	font-size: 1.2em;
+}
+.highlight {
+	padding-bottom: 1.3em;
+	font-size: 1.6em;
+	font-weight: 500;
+	font-family: "Helvetica";
+	color: #575757;
+}
+.highlight-italic {
+	font-family: "Serif";
+	font-size: 1.4em;
+	color: #575757;
+	border-left: none !important;
+	font-style: italic;
+	margin-bottom: -5px;
+	&::before {
+		content: "“";
+		color: #6f911a;
+		font-size: 1em;
+	}
+	&::after {
+		content:"”";
+		color: #6f911a;
+		font-size: 1em;
+	}
 }
 label {
 	font-family: "helvetica";
@@ -932,17 +962,21 @@ label {
 	background-color: #364577;
 }
 .bgc-atomic-tangerine {
-	background-color: #F3976C;
+	/*background-color: #F3976C;*/
+	background-color: $color-orange-chouette;
 }
 .tc-white {
-	color: #F3976C !important;
+	/*color: #F3976C !important;*/
+	color: white !important;
 }
 .btn-atomic-tangerine {
-	background: #F3976C;
+	/*background: #F3976C;*/
+	background: $color-orange-chouette;
 	color: #FFFFFF !important;
 	&:hover {
 		background: #c27956 !important;
 		color: #FFFFFF !important;
+		transform: scale(1.05);
 	}
 }
 .ltc-white {
@@ -1097,8 +1131,8 @@ label {
 		position: relative;
 	}
 	.bloc {
-		padding-left: env(SAFE-AREA-INSET-LEFT, 10px);
-		padding-right: env(SAFE-AREA-INSET-RIGHT, 10px);
+		padding-left: env(safe-area-inset-left, 10px);
+		padding-right: env(safe-area-inset-right, 10px);
 	}
 	.bloc-group {
 		display: block;
