--- a/main.scss
+++ b/main.scss
@@ -490,7 +490,7 @@ button {
 }
 #bloc-1-hero {
 	h1 {
-		font-size: 32px;
+		font-size: 2.3em;
 	}
 }
 .navbar {
@@ -530,7 +530,7 @@ button {
 	>li {
 		float: left;
 		margin-top: 4px;
-		font-size: 16px;
+		font-size: 18px;
 		a {
 			&:hover {
 				background: transparent;
@@ -828,7 +828,7 @@ h3 {
 	font-family: "helvetica";
 	font-weight: 400;
 	color: #575757 !important;
-	font-size: 15px;
+	/*font-size: 16px;*/
 	/*text-transform: uppercase;*/
 	font-size: 1.4em;
 	line-height: 1.4em;
@@ -855,18 +855,18 @@ p {
 	font-family: "helvetica";
 	font-weight: 400;
 	color: #575757;
-	font-size: 1.2em;
+	font-size: 1.3em;
 }
 .highlight {
 	padding-bottom: 1.3em;
-	font-size: 1.6em;
+	font-size: 1.6em !important;
 	font-weight: 500;
 	font-family: "Helvetica";
 	color: #575757;
 }
 .highlight-italic {
 	font-family: "Serif";
-	font-size: 1.4em;
+	font-size: 1.4em !important;
 	color: #575757;
 	border-left: none !important;
 	font-style: italic;
@@ -874,12 +874,12 @@ p {
 	&::before {
 		content: "“";
 		color: #6f911a;
-		font-size: 1em;
+		font-size: 1.4em;
 	}
 	&::after {
 		content:"”";
 		color: #6f911a;
-		font-size: 1em;
+		font-size: 1.4em;
 	}
 }
 label {
@@ -918,7 +918,7 @@ label {
 	color: #FFFFFF !important;
 	text-transform: uppercase;
 	padding: 12px 28px 12px 28px;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 700;
 }
 .social {
@@ -1367,4 +1367,12 @@ label {
 		padding-left: 0;
 		padding-right: 0;
 	}
+}
+.letter-sp {
+	letter-spacing: 0.1em;
+	font-size: 1.3em;
+	font-weight: 500;
+}
+em {
+	font-size: 1.2em;
 }
