optimisation images pages accueil

--- a/main.scss
+++ b/main.scss
@@ -751,6 +751,10 @@ a[data-lightbox] {
 	left: 15px;
 	right: 15px;
 	bottom: 5px;
+	text-align: center;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 .close-lightbox {
 	color: #FFF;
@@ -948,7 +952,7 @@ label {
 	box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 .black-background {
-	background-color: rgba(165, 147, 99, 0.7);
+	background-color: #8D6B49;
 	padding: 40px 40px 40px 40px;
 }
 .bold-link {
@@ -1005,7 +1009,7 @@ label {
 	background-image: url("img/la-chouette-agence-banniere.jpg");
 }
 .bg-presentation {
-	background-image: url("img/image-de-presentation.bmp");
+	background-image: url("img/image-de-presentation.jpg");
 }
 @media (min-width: 768px) {
 	.site-navigation {
@@ -1377,4 +1381,10 @@ em {
 	font-size: 1.2em;
 	font-weight: 500;
 	color: #575757;
+}
+.img {
+	margin-left: auto;
+	margin-right: auto;
+	width: 320px;
+	height: 320px;
 }
