--- a/main.scss
+++ b/main.scss
@@ -42,10 +42,10 @@ button {
 	-o-background-size: cover;
 	background-size: cover;
 	position: relative;
-	.container {
+	/*.container {
 		padding-left: 0;
 		padding-right: 0;
-	}
+	}*/
 }
 .bloc-lg {
 	padding: 100px 50px;
@@ -203,7 +203,7 @@ button {
 				color: rgba(255, 255, 255, 1);
 			}
 			.icon-md {
-				color: #364577;
+				color: #364577 !important;
 				transform: scale(1.2);
 			}
 			.icon-lg {
@@ -910,7 +910,7 @@ label {
 	margin: auto auto auto auto;
 }
 .tight-width-whitespace {
-	max-width: 600px;
+	max-width: 700px;
 	margin: auto auto auto auto;
 }
 .h1 {
@@ -1109,12 +1109,12 @@ label {
 		}
 	}
 }
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 	.b-parallax {
 		background-attachment: scroll;
 	}
 }
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
 	.b-parallax {
 		background-attachment: scroll;
 	}
@@ -1135,8 +1135,9 @@ label {
 		position: relative;
 	}
 	.bloc {
-		padding-left: env(safe-area-inset-left, 10px);
-		padding-right: env(safe-area-inset-right, 10px);
+		padding :
+			env(safe-area-inset-left, 10px)
+			env(safe-area-inset-right, 10px);
 	}
 	.bloc-group {
 		display: block;
@@ -1149,13 +1150,13 @@ label {
 	.bloc-fill-screen {
 		.fill-bloc-top-edge {
 			padding: 0 20px;
-			padding-left: constant(safe-area-inset-left);
-			padding-right: constant(safe-area-inset-right);
+			padding-left: env(safe-area-inset-left);
+			padding-right: env(safe-area-inset-right);
 		}
 		.fill-bloc-bottom-edge {
 			padding: 0 20px;
-			padding-left: constant(safe-area-inset-left);
-			padding-right: constant(safe-area-inset-right);
+			padding-left: env(safe-area-inset-left);
+			padding-right: env(safe-area-inset-right);
 		}
 	}
 }
@@ -1387,4 +1388,8 @@ em {
 	margin-right: auto;
 	width: 320px;
 	height: 320px;
+}
+.white {
+	color: white !important;
+	
 }
