--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,5 @@
 $color-orange-chouette: #DC2F02;
+$color-orange-chouette-fonce: darken($color-orange-chouette, 20%);
 
 body {
 	margin: 0;
@@ -998,13 +999,13 @@ label {
 	background: $color-orange-chouette;
 	color: #FFFFFF !important;
 	&:hover {
-		background: #c27956 !important;
+		background: #B61600 !important;
 		color: #FFFFFF !important;
 		transform: scale(1.05);
 		border: white 2px solid;
 	}
 	&:focus {
-		background: #c27956 !important;
+		background: #B61600 !important;
 		color: #FFFFFF !important;
 		transform: scale(1.05);
 		border: white 2px solid;
@@ -1424,6 +1425,10 @@ em {
 .img-realisations {
 	&:focus {
 		background-color: rgba(0, 0, 0, 0.2);
+		& > img {
+			border: 2px solid $color-orange-chouette;
+			opacity: .4;
+		}
 	}
 }
 .white {
@@ -1436,6 +1441,28 @@ em {
 	}
 	&:hover {
 		border: 3px solid #333333 !important;
+	}
+
+}
+.h2plus, .h1plus {
+	font-size: 2.5em !important;
+}
+.a-uplift {
+	background-color: rgba(0, 0, 0, .7);
+	&:focus-within {
+		transform: scale(1.4);
+		background-color: #000000;
+	}
+	> span {
+		color: white;
+	}
+}
+.fa-chevron-up {
+	&:focus {
+		transform: scale(1.4) !important;
+	}
+	&:hover {
+		transform: scale(1.4) !important;
 	}
 
 }
