--- a/main.scss
+++ b/main.scss
@@ -131,9 +131,12 @@ button {
 	}
 }
 .texture-paper {
+	background-color: black;
+	opacity: .8;
 	&::before {
-		background: url("img/texture-paper.png");
-		background-size: 280px 280px;
+		/*background: url("img/texture-paper.png");
+		background-size: 280px 280px;*/
+		background-color: rgba(0, 0, 0, .4);
 	}
 }
 .b-parallax {
@@ -984,7 +987,8 @@ label {
 	background-color: #FFFFFF;
 }
 .bgc-dark-slate-blue {
-	background-color: #364577;
+	/*background-color: #364577;*/
+	background-color: black;
 }
 .bgc-atomic-tangerine {
 	/*background-color: #F3976C;*/
@@ -1468,4 +1472,7 @@ em {
 		transform: scale(1.4) !important;
 	}
 
+}
+#pret {
+	color: white;
 }
