--- a/style.css
+++ b/style.css
@@ -145,9 +145,14 @@ button {
   right: 0;
 }
 
+.texture-paper {
+  background-color: black;
+  opacity: 0.8;
+}
 .texture-paper::before {
-  background: url("img/texture-paper.png");
-  background-size: 280px 280px;
+  /*background: url("img/texture-paper.png");
+  background-size: 280px 280px;*/
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .b-parallax {
@@ -967,7 +972,8 @@ label {
 }
 
 .bgc-dark-slate-blue {
-  background-color: #364577;
+  /*background-color: #364577;*/
+  background-color: black;
 }
 
 .bgc-atomic-tangerine {
@@ -1464,6 +1470,10 @@ em {
 }
 .fa-chevron-up:hover {
   transform: scale(1.4) !important;
+}
+
+#pret {
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
