renommage images decoratives, reajustement footer page contact

--- a/main.scss
+++ b/main.scss
@@ -992,7 +992,7 @@ label {
 }
 .bgc-atomic-tangerine {
 	/*background-color: #F3976C;*/
-	background-color: $color-orange-chouette;
+	background-color: #c0392b;
 }
 .tc-white {
 	/*color: #F3976C !important;*/
@@ -1000,7 +1000,7 @@ label {
 }
 .btn-atomic-tangerine {
 	/*background: #F3976C;*/
-	background: $color-orange-chouette;
+	background: #B61600;
 	color: #FFFFFF !important;
 	&:hover {
 		background: #B61600 !important;
