--- a/main.scss
+++ b/main.scss
@@ -6,8 +6,6 @@ body {
 	padding: 0;
 	background: #FFF;
 	overflow-x: hidden;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 }
 a {
 	transition: all .3s ease-in-out;
@@ -38,9 +36,6 @@ button {
 	clear: both;
 	background: 50% 50% no-repeat;
 	padding: 0 50px;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
 	background-size: cover;
 	position: relative;
 	/*.container {
@@ -58,64 +53,34 @@ button {
 	padding: 20px 50px;
 }
 .bg-center {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-l-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-r-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-t-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 	background: top no-repeat;
 }
 .bg-b-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-tl-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-bl-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-tr-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-br-edge {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 }
 .bg-repeat {
-	-webkit-background-size: auto !important;
-	-moz-background-size: auto !important;
-	-o-background-size: auto !important;
 	background-size: auto !important;
 	background: repeat;
 }
@@ -745,11 +710,9 @@ a[data-lightbox] {
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
-			-webkit-transform: translateY(-50%);
 		}
 		img {
 			opacity: 0.6;
-			-webkit-animation-fill-mode: none;
 			animation-fill-mode: none;
 		}
 	}
@@ -1043,10 +1006,12 @@ label {
 	background-image: url("img/lines-h2-bg.png");
 }
 .bg-banniere {
-	background-image: url("img/la-chouette-agence-banniere.jpg");
+	background-image: url("./../img/la-chouette-agence-banniere.jpg");
+	filter: brightness(.6);
+	filter: contrast(150%);
 }
 .bg-presentation {
-	background-image: url("img/image-de-presentation.jpg");
+	background-image: url("./../img/image-de-presentation.jpg");
 }
 @media (min-width: 768px) {
 	.site-navigation {
@@ -1054,7 +1019,6 @@ label {
 		top: 50%;
 		right: 20px;
 		transform: translate(0, -50%);
-		-webkit-transform: translateY(-50%);
 	}
 	.nav {
 		>li {
@@ -1151,7 +1115,7 @@ label {
 		background-attachment: scroll;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
 	.b-parallax {
 		background-attachment: scroll;
 	}
@@ -1251,8 +1215,7 @@ label {
 	.site-navigation {
 		position: inherit;
 		transform: none;
-		-webkit-transform: none;
-		-ms-transform: none;
+
 	}
 	.nav {
 		>li {
@@ -1301,7 +1264,6 @@ label {
 	.navbar-collapse {
 		padding: 0;
 		overflow-x: hidden;
-		-webkit-box-shadow: none;
 		box-shadow: none;
 	}
 	.navbar-brand {
