contrast section mission

--- a/main.scss
+++ b/main.scss
@@ -939,7 +939,7 @@ label {
 	box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 .black-background {
-	background-color: #8D6B49;
+	background-color: #4d361d;
 	padding: 40px 40px 40px 40px;
 }
 .bold-link {
