ajout lien vers openstreetmap pr access adresse agence+ lien mailto

--- a/main.scss
+++ b/main.scss
@@ -1446,3 +1446,19 @@ em {
 	padding-left: 15px !important;
 	padding-right: 15px !important;
 }
+#office_address, #mailto {
+	text-decoration: underline !important;
+	display: inline-block;
+	&:hover {
+		transform: scale(1.05) !important;
+		background-color: rgba(0, 0, 0, .4);
+		color: white !important;
+		text-decoration: none;
+	}
+	&:focus {
+		transform: scale(1.05);
+		background-color: rgba(0, 0, 0, .4);
+		color: white !important;
+		text-decoration: none;
+	}
+}
